Project

General

Profile

Actions

Bug #12866

closed

Complex should not respond to clamp

Bug #12866: Complex should not respond to clamp

Added by timocp (Tim Peters) almost 10 years ago. Updated almost 10 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:77720]

Description

Comparable#clamp has been added, but doesn't work in Complex. It should be undefined on Complex like other Comparable methods are.


Files

Actions

Also available in: PDF Atom